Diplom: "2. Добавить функцию комментирования"