@@ -13,6 +13,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.WebClientService;
 import ru.practicum.dto.StatsDtoForView;
+import ru.practicum.dto.comment.CommentEvent;
 import ru.practicum.dto.event.*;
 import ru.practicum.dto.filter.EventFilter;
 import ru.practicum.dto.request.EventRequestStatusUpdateRequest;
@@ -23,6 +24,7 @@ import ru.practicum.exception.*;
 import ru.practicum.mapper.EventMapper;
 import ru.practicum.mapper.LocationMapper;
 import ru.practicum.model.*;
+import ru.practicum.repository.CommentRepository;
 import ru.practicum.repository.EventRepository;
 import ru.practicum.service.category.CategoryService;
 import ru.practicum.service.request.ParticipationRequestService;
@@ -38,6 +40,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
+import static java.util.stream.Collectors.toMap;
 import static ru.practicum.model.QEvent.event;
 
 @Slf4j
@@ -54,6 +57,7 @@ public class EventServiceImpl implements EventService {
     private final WebClientService statsClient;
     private final ParticipationRequestService participationRequestService;
     private final LocationMapper locationMapper;
+    private final CommentRepository commentRepository;
     private static final String nameApp = "ewmService";
 
     public List<EventShortDto> getMyEvents(Long userId, Integer from, Integer size) {
@@ -62,8 +66,18 @@ public class EventServiceImpl implements EventService {
         Pageable pageable = PageRequest.of(from, size, Sort.by("id").ascending());
 
         Predicate predicate = QEvent.event.initiator.id.ne(userId);
-        List<EventShortDto> result = eventRepository.findAll(predicate, pageable)
-                .stream().map(eventMapper::mapToShortDto).collect(Collectors.toList());
+        List<Event> events = eventRepository.findAll(predicate, pageable).toList();
+        List<Long> eventIds = events.stream().map(Event::getId).collect(Collectors.toList());
+        List<CommentEvent> commentsCount = commentRepository.getCommentsEvents(eventIds);
+
+        Map<Long, Long> commentsMap = commentsCount.stream()
+                .collect(toMap(CommentEvent::getEventId, CommentEvent::getCommentCount));
+
+        for (Event eve : events) {
+            eve.setComments(commentsMap.getOrDefault(eve.getId(), 0L));
+        }
+        List<EventShortDto> result = events.stream()
+                .map(eventMapper::mapToShortDto).collect(Collectors.toList());
         log.info("Выдан результат запроса о своих событиях ({} событий), для пользователя с ID = {} и name = {}.",
                 result.size(), userFromDb.getId(), userFromDb.getName());
         return result;
@@ -279,6 +293,7 @@ public class EventServiceImpl implements EventService {
 
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(eventId));
         log.info("Выполнено обновление события с ID = {}.", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -305,6 +320,7 @@ public class EventServiceImpl implements EventService {
         Event result = events.get(0);
         statsClient.save(nameApp, httpServletRequest.getRequestURI(),
                 httpServletRequest.getRemoteAddr(), LocalDateTime.now());
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос события по ID = {} в общедоступном режиме ", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -329,6 +345,7 @@ public class EventServiceImpl implements EventService {
 
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос собственного события по ID = {} в приватном режиме ", eventId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -356,6 +373,7 @@ public class EventServiceImpl implements EventService {
 
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Отправлен ответ на запрос об отмене события с ID = {} пользователем с ID = {}.", eventId, userId);
         return eventMapper.mapFromModelToFullDto(result);
     }
@@ -398,6 +416,7 @@ public class EventServiceImpl implements EventService {
 
         events = utilService.fillConfirmedRequests(events, confirmedRequests);
         Event result = events.get(0);
+        result.setComments(commentRepository.countCommentsForEvent(result.getId()));
         log.info("Выполнено обновление события с ID = {}.", eventId);
 
         return eventMapper.mapFromModelToFullDto(result);
@@ -428,6 +447,7 @@ public class EventServiceImpl implements EventService {
         eventFromDb.setEventState(EventState.PUBLISHED);
         eventFromDb.setPublishedOn(LocalDateTime.now());
         Event saved = eventRepository.save(eventFromDb);
+        saved.setComments(commentRepository.countCommentsForEvent(saved.getId()));
         log.info("Опубликовано событие с ID = {}.", eventId);
 
         return eventMapper.mapFromModelToFullDto(saved);
